--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,9 @@
 		"prettier:fix": "prettier --config .prettierrc.json --write ."
 	},
 	"dependencies": {
+		"@fortawesome/free-solid-svg-icons": "^6.4.2",
+		"@fortawesome/react-fontawesome": "^0.2.0",
+		"antd": "^5.10.2",
 		"next": "13.5.6",
 		"react": "^18",
 		"react-dom": "^18"
