--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,10 +24,13 @@
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"autoprefixer": "^10.4.16",
 		"eslint": "^8",
 		"eslint-config-next": "13.5.6",
 		"lint-staged": "^15.0.2",
+		"postcss": "^8.4.31",
 		"prettier": "^3.0.3",
+		"tailwindcss": "^3.3.5",
 		"typescript": "^5"
 	},
 	"lint-staged": {
