--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,8 +15,14 @@
 		"incremental": true,
 		"plugins": [{ "name": "next" }],
 		"paths": {
-			"@/*": ["./src/*"]
-		}
+			"@/*": ["./src/*"],
+		},
+		"noEmitOnError": true,
+		"sourceMap": true,
+		"noImplicitAny": true,
+		"noUnusedParameters": true,
+		"noUnusedLocals": true,
+		"noImplicitReturns": true,
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
 	"exclude": ["node_modules"]
