--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
 		"autoprefixer": "^10.4.16",
+		"daisyui": "^3.9.4",
 		"eslint": "^8",
 		"eslint-config-next": "13.5.6",
 		"lint-staged": "^15.0.2",
