--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,12 @@
 	"dependencies": {
 		"@fortawesome/free-solid-svg-icons": "^6.4.2",
 		"@fortawesome/react-fontawesome": "^0.2.0",
+		"@types/uniqid": "^5.3.4",
 		"antd": "^5.10.2",
 		"next": "13.5.6",
 		"react": "^18",
-		"react-dom": "^18"
+		"react-dom": "^18",
+		"uniqid": "^5.4.0"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
