--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
 	"devDependencies": {
 		"concurrently": "^8.2.2",
 		"husky": "^8.0.0"
+	},
+	"dependencies": {
+		"react-toastify": "^9.1.3"
 	}
 }
