--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
 		"next": "14.0.3",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-toastify": "^9.1.3",
 		"uniqid": "^5.4.0"
 	},
 	"devDependencies": {
