--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
 	"dependencies": {
 		"@fortawesome/free-solid-svg-icons": "^6.4.2",
 		"@fortawesome/react-fontawesome": "^0.2.0",
+		"@tanstack/react-query": "^5.12.2",
 		"@types/uniqid": "^5.3.4",
 		"antd": "^5.11.2",
+		"date-fns": "^2.30.0",
 		"next": "14.0.3",
 		"react": "^18",
 		"react-dom": "^18",
