--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
 		"date-fns": "^2.30.0",
 		"next": "14.0.3",
 		"react": "^18",
+		"react-barcode": "^1.4.6",
 		"react-dom": "^18",
+		"react-qr-code": "^2.0.12",
 		"react-toastify": "^9.1.3",
 		"uniqid": "^5.4.0"
 	},
