--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
 		"@types/uniqid": "^5.3.4",
 		"antd": "^5.11.2",
 		"date-fns": "^2.30.0",
+		"moment": "^2.29.4",
 		"next": "14.0.3",
 		"react": "^18",
 		"react-dom": "^18",
