--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
 		"@types/uniqid": "^5.3.4",
 		"antd": "^5.11.2",
 		"date-fns": "^2.30.0",
+		"http-status": "^1.7.3",
 		"next": "14.0.3",
+		"pc-vn": "^1.0.1",
 		"react": "^18",
 		"react-barcode": "^1.4.6",
 		"react-dom": "^18",
