--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -5,3 +5,5 @@ NEXT_PUBLIC_AUTH_ENDPOINT=$NEXT_PUBLIC_API_ENDPOINT/auth
 NEXT_PUBLIC_ORDER_ENDPOINT=$NEXT_PUBLIC_API_ENDPOINT/order
 
 NEXT_PUBLIC_POINT_ENDPOINT=$NEXT_PUBLIC_API_ENDPOINT/point
+
+NEXT_PUBLIC_USER_ENDPOINT=$NEXT_PUBLIC_API_ENDPOINT/user
