--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	},
 	"dependencies": {
 		"@goongmaps/goong-js": "^1.0.9",
+		"react-qr-scanner": "^1.0.0-alpha.11",
 		"react-toastify": "^9.1.3"
 	}
 }
