--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
 		"react-qr-code": "^2.0.12",
 		"react-qr-scanner": "^1.0.0-alpha.11",
 		"react-toastify": "^9.1.3",
+		"recharts": "^2.10.3",
 		"uniqid": "^5.4.0"
 	},
 	"devDependencies": {
