:wrench: Fix format date, add more field order

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "concurrently -n frontend,backend -c blue,green \"npm run dev:frontend\" \"npm run dev:backend\"",
 		"dev:frontend": "cd frontend && npm run dev",
-		"dev:backend": "cd backend && dotnet watch run",
+		"dev:backend": "cd backend && dotnet watch --non-interactive run",
 		"pre:backend": "cd backend && dotnet restore",
 		"pre:frontend": "cd frontend && npm i",
 		"prepare": "husky install && npm run pre:backend && npm run pre:frontend"
