:construction: Need fix delivery history api

--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -7,3 +7,5 @@ NEXT_PUBLIC_ORDER_ENDPOINT=$NEXT_PUBLIC_API_ENDPOINT/order
 NEXT_PUBLIC_POINT_ENDPOINT=$NEXT_PUBLIC_API_ENDPOINT/point
 
 NEXT_PUBLIC_USER_ENDPOINT=$NEXT_PUBLIC_API_ENDPOINT/user
+
+NEXT_PUBLIC_DELIVERY_ENDPOINT=$NEXT_PUBLIC_API_ENDPOINT/delivery
